# pykube

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml  docker-image.yml
manifests/: deployment.yaml  service.yaml
pykube/: pykube.py
tests/: test_pykube.py
