[tool.poetry]
name = "pykube"
version = "0.1.0"
description = "Python Flask application on Kubernetes. It includes all the necessary files and configurations to automate the deployment process using GitHub Actions.."
authors = ["Deepika <dejain4@gmail.com>"]
readme = "README.md"
packages = [{include = "pykube"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
redis = "^4.5.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.2.2"
bandit = "^1.7.5"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
